# scientific_plots

./: .gitignore  Makefile  README.md  pyproject.toml
scientific_plots/aizawa/: aizawa.py
scientific_plots/base/: base.py
scientific_plots/corda/: corda.py
scientific_plots/lorenz/: lorenz.py
scientific_plots/rossler/: rossler.py
